feat: proper symbol checking and completion in .profile-files